# Rust-Actix-Web

./: Cargo.toml
src/: custom_error.rs  custom_guard.rs  custom_middleware.rs  database.rs  enumerate.rs  main.rs  regex_constants.rs  route_set.rs  student.rs
static/: 404.html  index.html
