[package]
name = "demo-actix-web"
version = "0.1.0"
authors = ["silentdoer <silentdoer@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9"
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2"
actix-session = "0.3"
actix-utils = "1.0"
actix-redis = "0.8"
actix-service = "1.0"
actix-http = "1.0"
redis-async = "0.6"
env_logger = "0.7"
futures = "0.3"
futures-timer = "2.0"
bytes = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
# serde_repr = "0.1"
json = "0.12"
rand = "0.7"
derive_more = "0.99"
validator = {version = "0.10"}
validator_derive = {version = "0.10", default-features = false, features = ["phone"]}
regex = "1.3"
lazy_static = "1"
