[package]
name = "demo-actix-web"
version = "0.1.0"
authors = ["silentdoer <silentdoer@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-rt = "1"
actix-files = "0.3"
actix-session = "0.4"
actix-utils = "2.0"
actix-redis = "0.9"
actix-service = "1.0"
actix-http = "2"
redis-async = "0.6"
env_logger = "0.7"
futures = "0.3"
#futures-timer = "3.0"
bytes = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
# serde_repr = "0.1"
json = "0.12"
rand = "0.7"
derive_more = "0.99"
validator = { version = "0.11" }
validator_derive = { version = "0.11", default-features = false, features = ["phone"] }
regex = "1.3"
lazy_static = "1"
# 这个是指最小1.1.0的意思（但好像也会限制最大是不超过2.0.0？）
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
r2d2 = { version = "0.8" }
